:+1: Implement crud download task
